--- a/Checkbox-materias-alunos-objeto/style.css
+++ b/Checkbox-materias-alunos-objeto/style.css
@@ -5,5 +5,15 @@ body {
 #container {
     border: 1px solid black;
     padding: 1rem;
-    margin: 1rem 22rem;
+    margin: 5rem 26rem;
+    border: 1px solid;
+}
+
+#container input {
+    font-size: 1rem;
+    margin: 0.5rem;
+}
+
+#res {
+    font-size: 2rem;
 }
