--- a/Site-ordenacao-insercao-selecao/style.css
+++ b/Site-ordenacao-insercao-selecao/style.css
@@ -3,16 +3,20 @@ body {
 }
 
 h1 {
+    margin-top: 10px;
+    margin-bottom: 10px;
     text-align: center;
     font-size: 3rem;
+    background-color: beige;
 }
 
 #container {
+    
     background-color: rgb(228, 220, 220);
     text-align: center;
     border: 1px solid black;
     border-radius: 3px;
-    margin: 4rem 30rem;
+    margin: 5.3rem 30rem;
     box-shadow: 1px 1px 3px;
 }
 
@@ -35,9 +39,11 @@ h1 {
 
 #arr,
 #arrIns,
-#arrSel {
+#arrSel,
+#arrBub {
     margin-left: 20rem;
     font-size: 2rem;
+    margin-top: 15px;
 }
 
 #container #limpar {
